update express project

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/mxviteri/advanced-first-web-server.git"
   },
-  "author": "",
+  "author": "Greta Sepulveda",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/mxviteri/advanced-first-web-server/issues"
